cmake_minimum_required(VERSION 3.17)
project(B C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(B
        B22.c
        isimsiz.c
        main.c
        mainb1.c
        mainb10.c
        mainb11.c
        mainb12.c
        mainb13.c
        mainb14.c
        mainb15.c
        mainb16.c
        mainb17.c
        mainb18.c
        mainb19.c
        mainb2.c
        mainb20.c
        mainb21.c
        mainb22.c
        mainb23.c
        mainb24.c
        mainb3.c
        mainb4.c
        mainb5.c
        mainb6.c
        mainb7.c
        mainb8.c
        mainb9.c)
